<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gamma.personas.MainActivity">

    <Button
        android:id="@+id/motrarRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_usuario"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/mod_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modificar_usuario"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/consular_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:layout_marginBottom="10dp"/>



</LinearLayout>
